--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "gts lint",
-    "clean": "gts clean",
+    "lint": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.{ts,md}\"",
+    "clean": "rm -fr dist",
     "build": "tsc",
-    "fix": "gts fix",
     "prepare": "npm run build",
     "pretest": "npm run build",
     "posttest": "npm run lint"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
-    "gts": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.4.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
