--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "lib": ["es2015"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
