--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.{ts,md}\"",
     "clean": "rm -fr dist",
     "build": "tsc",
     "prepare": "npm run build",
-    "pretest": "npm run build",
-    "posttest": "npm run lint"
+    "pretest": "npm run build"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
   "dependencies": {
