--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Nelson Wei",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "files": [
     "build/src"
   ],
@@ -14,6 +14,7 @@
     "format": "prettier --write \"src/**/*.{ts,md}\"",
     "clean": "rm -fr dist",
     "build": "tsc",
+    "pack": "ncc build",
     "prepare": "npm run build",
     "pretest": "npm run build"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^8.57.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
@@ -33,7 +35,6 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@faker-js/faker": "^9.4.0",
-    "@vercel/ncc": "^0.38.3",
     "algoliasearch": "^5.19.0"
   },
   "engines": {
