--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "lib",
+    "rootDir": "./src",
     "sourceMap": true,
-    "outDir": "dist"
+    "target": "es6",
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
