--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -10,23 +10,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Extract branch name
-        id: extractBranch
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extractBranch
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+
       - name: Install dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Pack
         run: npm run pack
+
       - name: Check packed js changes
         id: packedJsStatus
-        run: echo ::set-output name=changes::$(git status ${{ env.PACKED_JS_PATH }} --porcelain)
+        run: echo "{changes}={$(git status ${{ env.PACKED_JS_PATH }} --porcelain)}" >> $GITHUB_OUTPUT
+
       - name: Commit packed js
         id: commitPackedJs
         if: steps.packedJsStatus.outputs.changes
@@ -35,6 +42,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add ${{ env.PACKED_JS_PATH }}
           git commit -m "Pack with dependencies to ${{ env.PACKED_JS_PATH }}"
+
       - name: Push packed js
         if: steps.commitPackedJs.outcome == 'success'
         uses: ad-m/github-push-action@master
