--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Extract branch name
+        id: extractBranch
         shell: bash
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-        id: extractBranch
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -32,7 +32,7 @@ jobs:
 
       - name: Check packed js changes
         id: packedJsStatus
-        run: echo "{changes}={$(git status ${{ env.PACKED_JS_PATH }} --porcelain)}" >> $GITHUB_OUTPUT
+        run: echo "changes={$(git status ${{ env.PACKED_JS_PATH }} --porcelain)}" >> $GITHUB_OUTPUT
 
       - name: Commit packed js
         id: commitPackedJs
