--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -47,7 +47,7 @@ jobs:
         if: steps.commitPackedJs.outcome == 'success'
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
           force: true
           branch: ${{ steps.extractBranch.outputs.branch }}
