--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write \"src/**/*.{ts,md}\"",
     "clean": "rm -fr dist",
     "build": "tsc",
+    "watch-tsc": "tsc --watch",
+    "watch-ncc": "ncc build --watch",
     "pack": "ncc build",
     "prepare": "npm run build",
     "pretest": "npm run build"
