--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "@faker-js/faker": "^9.4.0",
-    "algoliasearch": "^5.19.0"
+    "@algolia/client-search": "^5.20.0",
+    "@faker-js/faker": "^9.4.0"
   },
   "engines": {
     "node": ">=10.0.0"
